# pcap-tool

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pdoc  pyproject.toml  requirements.txt  setup.sh  spec.md
.github/workflows/: ci.yml
docs/: Makefile  handling_nan_integers.md  performance.md  pipeline.md
examples/pipelines/: simple.yaml
src/: app.py  llm_summarizer.py  streamlit_theme.css
src/heuristics/: __init__.py  engine.py  rules.yaml
src/pcap_tool/: __init__.py  __main__.py  ai.py  app.py  chart_generator.py  enrichment.py  exceptions.py  (+9 more)
src/pcap_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_ai_data_prep.py  test_anonymize.py  test_cache_system.py  test_dns_tls_mismatch.py  test_engine.py  test_enrichment.py  test_error_detector.py  test_error_summarizer.py  test_exceptions.py  test_failure_capture.py  test_flow_protocol_guess.py  test_flow_table.py  test_flow_table_l7.py  test_heuristics_basic.py  test_heuristics_http_407.py  test_icmp_correlator.py  test_iter_frames.py  test_llm_summarizer.py  test_metrics_tls_versions.py  test_misc_data.py  test_missing_columns.py  test_nan_handling.py  test_packet_count_estimate.py  test_parser.py  test_parser_tls_cert.py  test_pdf_report.py  test_performance_analyzer.py  test_performance_benchmark.py  test_pipeline_helpers.py  test_plaintext_detector.py  test_property.py  test_protocol_inference.py  test_security_auditor.py  test_service_guesser.py  test_stats_collector.py  test_storage.py  test_summary.py  test_summary_excel.py  test_tcp_analysis_flags.py  (+4 more)
(+93 files in other folders)
