[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap_tool"            # public name (underscores are fine)
version = "0.1.0"
description = "MVP parser for PCAP files"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
defrag = ["scapy>=2.5.0"]
reassembly = ["pypcapkit>=1.3.5"]
dev = [
    "pytest>=7.0",
    "flake8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
